# curfil

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
CMakeModules/: FindMDBQ.cmake  FindNDARRAY.cmake  FindVIGRA.cmake  GetGitRevisionDescription.cmake
doc/: 0__mainpage_8h_source.html  Doxyfile.in  allocators_8hpp_source.html  annotated.html  classcurfil_1_1ConfusionMatrix-members.html  classcurfil_1_1ConfusionMatrix.html  classcurfil_1_1Depth-members.html  classcurfil_1_1Depth.html  classcurfil_1_1DeviceCache-members.html  classcurfil_1_1DeviceCache.html  classcurfil_1_1HyperoptClient-members.html  classcurfil_1_1HyperoptClient.html  classcurfil_1_1ImageCache-members.html  classcurfil_1_1ImageCache.html  classcurfil_1_1ImageFeatureEvaluation-members.html  classcurfil_1_1ImageFeatureEvaluation.html  classcurfil_1_1ImageFeatureFunction-members.html  classcurfil_1_1ImageFeatureFunction.html  classcurfil_1_1ImageFeaturesAndThresholds-members.html  classcurfil_1_1ImageFeaturesAndThresholds.html  classcurfil_1_1InformationGainScore-members.html  classcurfil_1_1InformationGainScore.html  classcurfil_1_1LabelImage-members.html  classcurfil_1_1LabelImage.html  classcurfil_1_1LabeledRGBDImage-members.html  classcurfil_1_1LabeledRGBDImage.html  classcurfil_1_1NormalizedInformationGainScore-members.html  classcurfil_1_1NormalizedInformationGainScore.html  classcurfil_1_1PixelInstance-members.html  classcurfil_1_1PixelInstance.html  classcurfil_1_1RGBColor-members.html  classcurfil_1_1RGBColor.html  classcurfil_1_1RGBDImage-members.html  classcurfil_1_1RGBDImage.html  classcurfil_1_1RandomForestImage-members.html  classcurfil_1_1RandomForestImage.html  classcurfil_1_1RandomSource-members.html  classcurfil_1_1RandomSource.html  classcurfil_1_1RandomTree-members.html  classcurfil_1_1RandomTree.html  (+190 more)
doc/html/: allocators_8cu.html  allocators_8cu.js  allocators_8cu__incl.map  allocators_8cu__incl.md5  allocators_8hpp.html  allocators_8hpp.js  allocators_8hpp__dep__incl.map  allocators_8hpp__dep__incl.md5  allocators_8hpp__incl.map  allocators_8hpp__incl.md5  allocators_8hpp_source.html  allocators__test_8cpp.html  allocators__test_8cpp.js  allocators__test_8cpp__incl.map  allocators__test_8cpp__incl.md5  allocators__test_8cpp_a4ad7979585695ed600d33c792a7e057b_cgraph.map  allocators__test_8cpp_a4ad7979585695ed600d33c792a7e057b_cgraph.md5  allocators__test_8cpp_ad171845f5bcf561ee46374f690bcfa9b_cgraph.map  allocators__test_8cpp_ad171845f5bcf561ee46374f690bcfa9b_cgraph.md5  annotated.html  annotated.js  classFixture-members.html  classFixture.html  classFixture.js  classFixture__coll__graph.map  classFixture__coll__graph.md5  classFixture_a7bd87f852602d02a205b4a811530dfe4_cgraph.map  classFixture_a7bd87f852602d02a205b4a811530dfe4_cgraph.md5  classallocate-members.html  classallocate.html  classallocate.js  classallocate__coll__graph.map  classallocate__coll__graph.md5  classallocate_a4d44d5ae073f00ec59abb766e1e5da26_cgraph.map  classallocate_a4d44d5ae073f00ec59abb766e1e5da26_cgraph.md5  classcurfil_1_1ConfusionMatrix-members.html  classcurfil_1_1ConfusionMatrix.html  classcurfil_1_1ConfusionMatrix.js  classcurfil_1_1ConfusionMatrix__coll__graph.map  classcurfil_1_1ConfusionMatrix__coll__graph.md5  (+2392 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  classes_61.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_68.js  classes_69.js  classes_6c.js  classes_6e.js  classes_72.js  classes_73.js  defines_61.js  defines_62.js  defines_63.js  defines_64.js  enums_61.js  enums_66.js  (+82 more)
doc/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_78.js  all_7e.js  classes_61.js  classes_63.js  classes_64.js  classes_66.js  classes_69.js  classes_6d.js  classes_6e.js  classes_70.js  classes_74.js  classes_75.js  classes_78.js  functions_61.js  functions_62.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_67.js  functions_68.js  functions_69.js  (+43 more)
scripts/NYU/: _solarized.py  _structure_classes.py  convert.py
scripts/hyperopt/: hyperopt_search.py
src/: CMakeLists.txt
src/curfil/: 0_mainpage.h  CMakeLists.txt  export.cpp  export.h  export.hpp  hyperopt.cpp  hyperopt.h  hyperopt_main.cpp  image.cpp  image.h  import.cpp  import.h  import.hpp  ndarray_ops.cpp  ndarray_ops.h  predict.cpp  predict.h  predict_main.cpp  random_features.cu  random_features.h  random_forest_image.cpp  random_forest_image.h  random_tree.cpp  random_tree.h  random_tree_image.cpp  random_tree_image.h  random_tree_image_ensemble.cpp  random_tree_image_ensemble.h  random_tree_image_gpu.cu  random_tree_image_gpu.h  score.h  train.cpp  train.h  train_main.cpp  utils.cpp  utils.h  version.cpp.in  version.h
src/tests/: CMakeLists.txt  feature_generation_test.cpp  hyperopt_test.cpp  image_cache_test.cu  image_test.cpp  import_export_test.cpp  random_tree_image_gpu_test.cu  random_tree_image_test.cpp  random_tree_test.cpp  test_common.h
util/: add_license.pl  height_feature.py  png2npy.py
